--- a/index.html
+++ b/index.html
@@ -17,13 +17,31 @@
     
     <br>
     <br>
-    <li>Humber College (Currently Enrolled)	</li>
+    <li>Humber College (Currently Enrolled)</li>
         Major: Robotics Engineering
         </a>
     <h2>Work Experience</h2>
     <h3>Server-Madhavi British Academy</h3>    
     <a>
-        ss
+        <li>Served clients in the canteen.</li>
+        <li>Helped customers to choose a variety of dishes.</li>
+        <li>Took orders from customers.</li>
     </a>
+    <h3>Skills</h3>
+    <a><li> service</li>
+        <li>Microsoft Office Suite</li>
+        <li>Organizational skills</li>
+        </a>
+        <h3>Certificates</h3>
+        <a><li>Web developer</li>
+        <li>AutoCad</li>
+        <li>Automation Studio</li>
+    </a>
+    <h3>Others</h3>
+    <li><a href="/4.0+File+Paths/web development/4.3 HTML Porfolio Project/public/contact.html">Contact me</a></li>
+    <li><a href="./hobies.html">My Hobbies</a></li>
+    <footer>
+        <p>© 2023 Kirtan</p>
+      </footer>
 </body>
 </html>
